package agent

import (
	"context"
	"fmt"
	"log"
	"os"
	"path/filepath"
	"strings"
	"time"

	"github.com/prism/daemon/internal/ai"
	"github.com/prism/daemon/internal/git"
	"github.com/prism/daemon/internal/github"
	pb "github.com/prism/daemon/proto"
	"github.com/redis/go-redis/v9"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

type Config struct {
	AgentID   string
	RedisAddr string
	GrpcAddr  string
}

type Worker struct {
	cfg         Config
	redisClient *redis.Client
	grpcClient  pb.AgentServiceClient
	gitService  git.GitService
	ghClient    github.GitHubClient
	aiClient    ai.Client
}

func NewWorker(cfg Config) *Worker {
	rdb := redis.NewClient(&redis.Options{
		Addr: cfg.RedisAddr,
	})

	conn, err := grpc.NewClient(cfg.GrpcAddr, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("did not connect: %v", err)
	}

	c := pb.NewAgentServiceClient(conn)

	// ============================================================================
	// AI Client ì´ˆê¸°í™” - ìš°ì„ ìˆœìœ„: í™˜ê²½ë³€ìˆ˜ â†’ ìë™ ì„ íƒ
	// ============================================================================
	var aiClient ai.Client

	// 1. ê°•ì œ ì„ íƒ
	if os.Getenv("OLLAMA_MOCK") == "true" {
		log.Println("ğŸ§ª Forcing Mock AI Client (OLLAMA_MOCK=true)")
		aiClient = ai.NewMockClient()
	} else {
		// 2. ìë™ ì„ íƒ (NewClientëŠ” ìë™ìœ¼ë¡œ Ollama ì—°ê²° ì‹œë„)
		aiClient = ai.NewClient()
	}

	return &Worker{
		cfg:         cfg,
		redisClient: rdb,
		grpcClient:  c,
		gitService:  git.NewGitService(),
		ghClient:    github.NewMockGitHubClient(),
		aiClient:    aiClient,
	}
}

func (w *Worker) Start() {
	log.Printf("ğŸš€ Starting Agent Worker for ID: %s", w.cfg.AgentID)

	// Register first
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	_, err := w.grpcClient.RegisterAgent(ctx, &pb.RegisterAgentRequest{
		AgentId: w.cfg.AgentID,
		Version: "0.1.0",
	})
	if err != nil {
		log.Printf("âš ï¸  Failed to register agent: %v. Continuing anyway...", err)
	}

	// Subscribe to Redis
	channel := fmt.Sprintf("tasks:%s", w.cfg.AgentID)
	log.Printf("ğŸ‘‚ Listening on Redis channel: %s", channel)

	pubsub := w.redisClient.Subscribe(context.Background(), channel)
	defer pubsub.Close()

	ch := pubsub.Channel()

	for msg := range ch {
		log.Printf("ğŸ“¨ Received task: %s", msg.Payload)
		go w.processTask(msg.Payload)
	}
}

func (w *Worker) processTask(payload string) {
	// Parse task ID from payload
	var taskId string
	for i, c := range payload {
		if c == ':' {
			taskId = payload[:i]
			break
		}
	}
	if taskId == "" {
		taskId = payload
	}

	log.Printf("\nğŸš€ ========================================\n")
	log.Printf("   Processing Task: %s\n", taskId)
	log.Printf("   ========================================\n")

	// Context with 30 minute timeout
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Minute)
	defer cancel()

	w.updateStatus(taskId, "IN_PROGRESS", "ğŸ¤– Agent started working on task...", "", "", "")

	// 1. Init/Open Git Repo
	log.Println("ğŸ“‚ Setting up Git repository...")
	repoPath := filepath.Join(os.TempDir(), "prism-repo")
	_ = os.MkdirAll(repoPath, 0755)
	repo, err := w.gitService.InitOrOpen(repoPath)
	if err != nil {
		w.updateStatus(taskId, "FAILED", fmt.Sprintf("âŒ Failed to init git repo: %v", err), "", "", "")
		return
	}

	// 2. Create Branch
	branchName := fmt.Sprintf("feat/task-%s", taskId)
	log.Printf("ğŸŒ³ Creating branch: %s\n", branchName)
	if err := w.gitService.CreateBranch(repo, branchName); err != nil {
		log.Printf("âš ï¸  Branch creation warning (might exist): %v", err)
	}
	w.updateStatus(taskId, "IN_PROGRESS", fmt.Sprintf("âœ… Created branch %s", branchName), branchName, "", "")

	// 3. AI Code Generation
	log.Println("\nğŸ¤– ========================================")
	log.Println("   Starting AI Code Generation...")
	log.Println("   ========================================\n")

	prompt := fmt.Sprintf(`You are an expert software engineer. Generate production-ready code for the following task:

Task ID: %s

Requirements:
- Use Spring Boot 3.x with modern Java
- Include proper annotations (@RestController, @Service, @Repository, etc.)
- Add comprehensive error handling with try-catch blocks
- Include input validation using @Valid and Jakarta validation
- Follow Java best practices and naming conventions
- Add JavaDoc comments for all public methods
- Make it production-ready with logging using slf4j
- Include proper HTTP status codes (200, 400, 404, 500)
- Create a simple but complete REST API example

Generate ONLY the code without explanations or markdown formatting.
Code should be immediately executable and compilable.`, taskId)

	startTime := time.Now()
	var generatedCode string
	var codeErr error

	// í™˜ê²½ë³€ìˆ˜ë¡œ ìŠ¤íŠ¸ë¦¬ë° ëª¨ë“œ ì„ íƒ
	useStreaming := os.Getenv("STREAM_CODE_GENERATION") == "true"

	if useStreaming {
		// ìŠ¤íŠ¸ë¦¬ë° ëª¨ë“œ (ì§„í–‰ìƒí™© ì‹¤ì‹œê°„ ì „ì†¡)
		log.Println("ğŸ“¡ Using streaming mode...")
		var codeBuffer strings.Builder

		codeErr = w.aiClient.GenerateCodeStream(ctx, prompt, func(chunk string) error {
			codeBuffer.WriteString(chunk)
			log.Printf("ğŸ“ Generated chunk: %d bytes", len(chunk))

			// ì§„í–‰ìƒí™© ì—…ë°ì´íŠ¸ (ì„ íƒ)
			// w.updateStatus(taskId, "IN_PROGRESS", fmt.Sprintf("ğŸ¤– Generating... (%d bytes)", codeBuffer.Len()), branchName, "", "")

			return nil
		})

		generatedCode = codeBuffer.String()
	} else {
		// ë¹„ìŠ¤íŠ¸ë¦¬ë° ëª¨ë“œ (ì „ì²´ ì‘ë‹µ ëŒ€ê¸°)
		log.Println("â³ Waiting for complete AI response...")
		generatedCode, codeErr = w.aiClient.GenerateCode(ctx, prompt)
	}

	elapsed := time.Since(startTime)

	if codeErr != nil {
		log.Printf("\nâš ï¸  AI generation failed after %.2fs: %v\n", elapsed.Seconds(), codeErr)
		log.Println("ğŸ“ Using fallback code...\n")

		generatedCode = fmt.Sprintf(`// Fallback code for task %s
// AI generation failed: %v
// Please implement manually

package com.prism.generated;

import org.springframework.web.bind.annotation.*;
import org.springframework.http.ResponseEntity;

@RestController
@RequestMapping("/api/task/%s")
public class Task%sController {
    
    @GetMapping
    public ResponseEntity<String> get() {
        return ResponseEntity.ok("TODO: Implement task %s");
    }
}`, taskId, codeErr, taskId, strings.ReplaceAll(taskId, "-", ""), taskId)

		w.updateStatus(taskId, "IN_PROGRESS", "âš ï¸  AI failed, using fallback", branchName, "", "")
	} else {
		log.Printf("âœ… AI generated %d characters in %.2f seconds\n", len(generatedCode), elapsed.Seconds())
		w.updateStatus(taskId, "IN_PROGRESS", fmt.Sprintf("âœ… AI generated %d bytes in %.2fs", len(generatedCode), elapsed.Seconds()), branchName, "", "")
	}

	// 4. Write generated code to file
	log.Println("ğŸ’¾ Writing generated code to file...")
	codeFile := filepath.Join(repoPath, fmt.Sprintf("Task%sController.java", strings.ReplaceAll(taskId, "-", "")))
	if err := os.WriteFile(codeFile, []byte(generatedCode), 0644); err != nil {
		w.updateStatus(taskId, "FAILED", fmt.Sprintf("âŒ Failed to write file: %v", err), branchName, "", "")
		return
	}
	log.Printf("âœ… Code written to: %s\n", codeFile)

	// 5. Commit
	log.Println("ğŸ“ Committing changes...")
	commitMsg := fmt.Sprintf("feat: implement task %s with AI\n\nGenerated in %.2fs using Ollama DeepSeek\nCode size: %d bytes", taskId, elapsed.Seconds(), len(generatedCode))
	hash, err := w.gitService.CommitChanges(repo, commitMsg)
	if err != nil {
		w.updateStatus(taskId, "FAILED", fmt.Sprintf("âŒ Failed to commit: %v", err), branchName, "", "")
		return
	}
	log.Printf("âœ… Committed with hash: %s\n", hash)
	w.updateStatus(taskId, "IN_PROGRESS", "âœ… Committed AI-generated changes", branchName, hash, "")

	// 6. Push (Mock)
	log.Println("ğŸ” Pushing to remote...")
	_ = w.gitService.Push(repo)

	// 7. Create PR
	log.Println("ğŸ”— Creating Pull Request...")
	prTitle := fmt.Sprintf("[Task %s] AI-Generated Implementation", taskId)
	prBody := fmt.Sprintf(`## AI-Generated Implementation

### Task ID
%s

### Generation Details
- **Time taken**: %.2f seconds
- **Code size**: %d bytes
- **Model**: Ollama DeepSeek-R1
- **Branch**: %s

### Changes
- Generated production-ready Spring Boot controller
- Includes error handling and validation
- Following best practices and naming conventions

### Review Checklist
- [ ] Code compiles without errors
- [ ] Tests pass successfully
- [ ] Code quality is acceptable
- [ ] Security considerations are met

*Generated by Prism AI Agent*`, taskId, elapsed.Seconds(), len(generatedCode), branchName)

	prUrl, prErr := w.ghClient.CreatePullRequest(prTitle, prBody, branchName, "main")
	if prErr != nil {
		log.Printf("âš ï¸  Failed to create PR: %v", prErr)
		prUrl = "<PR creation failed>"
	}

	// 8. Complete
	log.Println("\nâœ… ========================================")
	log.Println("   Task Completed Successfully!")
	log.Println("   ========================================\n")

	w.updateStatus(
		taskId,
		"DONE",
		fmt.Sprintf(
			"âœ… Work completed!\nğŸ“Š Time: %.2fs, Code: %d bytes\nğŸ”— PR: %s",
			elapsed.Seconds(),
			len(generatedCode),
			prUrl,
		),
		branchName,
		hash,
		prUrl,
	)
}

func (w *Worker) updateStatus(taskId, status, details, branch, commit, prUrl string) {
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	_, err := w.grpcClient.UpdateTaskStatus(ctx, &pb.UpdateTaskStatusRequest{
		TaskId:        taskId,
		AgentId:       w.cfg.AgentID,
		Status:        status,
		Details:       details,
		GitBranch:     branch,
		GitCommitHash: commit,
		GitPrUrl:      prUrl,
	})
	if err != nil {
		log.Printf("âš ï¸  Failed to update status: %v", err)
	}
}
